# RSS

./: .gitignore  CMakeLists.txt  avoid.md  readme.md
config/: RSS.openapi.json  TCS.openapi.json  config.yaml  map.xml  map2.xml  view.html
docs/: 调度器和命令.md  调度系统文件结构.xmind  车辆.md
include/component/: rssobject.hpp  rssresource.hpp  tcsobject.hpp  tcsresource.hpp
include/component/data/: vec.hpp
include/component/data/model/: action.hpp  alleyway.hpp  envelope.hpp  location.hpp  locationtype.hpp  path.hpp  point.hpp  visuallayout.hpp
include/component/data/order/: driverorder.hpp  orderquence.hpp  route.hpp  transportorder.hpp
include/component/event/: event.hpp  publisher.hpp  subscriber.hpp
include/component/log/: easylogging++.h
include/component/tools/http/: httplib.h
include/component/tools/json_validator/: validator.hpp
include/component/tools/jsoncons/: allocator_set.hpp  basic_json.hpp  conv_error.hpp  decode_json.hpp  encode_traits.hpp  item_event_visitor.hpp  json_content_handler.hpp  json_cursor.hpp  json_decoder.hpp  json_error.hpp  json_exception.hpp  json_object.hpp  json_traits_macros.hpp  json_type.hpp  pretty_print.hpp  staj_event.hpp  staj_event_reader.hpp  staj_iterator.hpp  uri.hpp  value_converter.hpp
include/component/tools/jsoncons/config/: binary_config.hpp  jsoncons_config.hpp
include/component/tools/jsoncons/detail/: heap_string.hpp  span.hpp  string_view.hpp  write_number.hpp
include/component/tools/jsoncons_ext/jsonpointer/: jsonpointer.hpp  jsonpointer_error.hpp
include/component/tools/jsoncons_ext/jsonschema/: json_validator.hpp
include/component/tools/jsoncons_ext/jsonschema/common/: compilation_context.hpp  evaluation_context.hpp  keyword_validators.hpp  schema_builder.hpp  schema_validator.hpp
include/component/tools/jsoncons_ext/jsonschema/draft201909/: draft201909_schema_builder.hpp
include/component/tools/jsoncons_ext/jsonschema/draft7/: schema_draft7.hpp
include/component/tools/log/: easylogging++.h
include/component/tools/mqtt/: mqtt.hpp
include/component/tools/utest/: utest.h
include/component/utest/: utest.h
include/component/util/: nurbs.hpp  taskpool.hpp  timer.hpp  tools.hpp
include/component/vda5050/: master.hpp  valitator.hpp  vda5050.hpp  vda5050insact.hpp  vda5050order.hpp  vda5050state.hpp
include/component/visualization/: visualizer.hpp
include/component/xml/: pugiconfig.hpp  pugixml.hpp
include/kernel/allocate/: order.hpp  resource.hpp
include/kernel/dispatch/: dispatch.hpp
include/kernel/driver/: command.hpp  vehicle.hpp
include/kernel/planner/: edge.hpp  planner.hpp  sovler.hpp  vertex.hpp
include/kernel/rule/: rule.hpp
include/kernel/schedule/: schedule.hpp
include/main/: httpsrv.hpp  rss.hpp  tcs.hpp
src/component/event/: publisher.cc  subscriber.cc
src/component/log/: easylogging++.cc
src/component/tools/log/: easylogging++.cc
src/component/tools/xml/: pugixml.cc
src/component/tools/yaml/: yaml.cc
src/component/vda5050/: master.cc
src/component/visualization/: visualizer.cc
src/component/xml/: pugixml.cc
src/kernel/allocate/: order.cc  resource.cc
src/kernel/dispatch/: dispatch.cc
src/kernel/driver/: command.cc  vehicle.cc
src/kernel/planner/: edge.cc  planner.cc  sovler.cc  vertex.cc
src/kernel/rule/: rule.cc
src/kernel/schedule/: schedule.cc
src/main/: httpsrv.cc  main.cc  rss.cc  tcs.cc
test/component/event/: event_test.cc
test/component/log/: log_test.cc
test/component/tools/http/: http_test.cc
test/component/tools/json/: json_test.cc  schema_test.cc
test/component/tools/log/: log_test.cc
test/component/tools/mqtt/: mqtt_test.cc
test/component/tools/xml/: xml_test.cc
test/component/xml/: xml_test.cc
test/kernel/: nurbs_test.cc
test/kernel/driver/: rabbit3_test.cc
test/main/: server_test.cc  tcs_test.cc
